# funding

./: README.md
backend/: Cargo.toml  readme.md
backend/migrations/: 20250826235450_init_schema.sql
backend/src/: lib.rs  main.rs
backend/src/data/: coin.rs  funding.rs  mod.rs  stats.rs
backend/src/db/: insert.rs  migrations.rs  mod.rs  select.rs
backend/src/exchanges/: mod.rs
backend/src/exchanges/extended/: mod.rs
backend/src/exchanges/extended/api/: endpoints.rs  types.rs
backend/src/exchanges/extended/handler/: handler.rs
backend/src/exchanges/paradex/api/: client.rs  endpoints.rs  mod.rs  types.rs
backend/src/exchanges/paradex/handler/: handler.rs
backend/src/exchanges/shared/: types.rs
backend/src/utils/: scheduler.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  router.ts  style.css
frontend/src/components/: FundingMatrix.vue  FundingTable.vue  Trend.vue
frontend/src/styles/: index.css
frontend/src/styles/base/: reset.css  typography.css  variables.css
frontend/src/styles/components/: arbitrage.css  controls.css  funding-rates.css  states.css  table.css
frontend/src/styles/layout/: dashboard.css  navigation.css  page.css
frontend/src/styles/utils/: animations.css  responsive.css
frontend/src/utils/: api.ts  calculations.ts  constants.ts  formatters.ts  styles.ts  types.ts
funding-backend/: readme.md
funding-backend/src/: main.rs
funding-backend/src/exchanges/: mod.rs
funding-frontend/: package-lock.json  package.json
funding-frontend/src/mock/: funding.json
(+5 files in other folders)
